# grok-agents-marketplace

./: .env.example  .gitignore  ARCHIVE-README-original.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  MERGE_PLAN.md  README.md  SCHEMA.md  SECURITY.md  _config.yml  featured-agents.json  images  package-lock.json  package.json  tailwind.config.ts  vercel.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent-listing-issue.yml  bug.yml  config.yml  feature.yml  new-template.yml
.github/lighthouse/: lighthouserc.json
.github/workflows/: ci.yml  dependency-review.yml  lighthouse.yml
_layouts/: default.html
agents/viral-thread-architect/: SAFETY-REPORT.md
agents/voice-companion/: grok-install.yaml
docs/: repo-metadata.md  submitting-your-own.md
docs/gifs/: README.md
docs/internal/: MERGE_PLAN.md
docs/visuals/: code-reviewer.md  thread-ghostwriter.md  trend-to-thread.md
registry/: .gitignore  .yamllint.yml  CONTRIBUTING.md  DISCLAIMER.md  README.md  SECURITY.md
registry/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
registry/docs/: template-anatomy.md
registry/scripts/: scan_template.py
schemas/: featured-agents.schema.json
scripts/: gen_poster.py  mock_run_template.py  rasterize_posters.py  validate_registry.py  validate_template.py
scripts/grok_install_stub/: pyproject.toml
scripts/grok_install_stub/grok_install/: __init__.py
scripts/grok_install_stub/grok_install/runtime/: __init__.py  arxiv.py  audio.py  delivery.py  storage.py  web_search.py
(+169 files in other folders)
