[project]
name = "grok-install-stub"
version = "0.0.0"
description = "In-repo stub runtime so templates can be validated without the real grok-install CLI."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["grok_install*"]
